[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stacksense"
version = "0.1.0"
description = "AI infrastructure monitoring for tracking usage, cost, and performance across OpenAI, Claude, ElevenLabs, Pinecone, and more. Supports SQLite (default) and PostgreSQL databases."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Abdulrahman Sadiq", email = "abdulkvng@gmail.com"}
]
keywords = ["ai", "monitoring", "openai", "claude", "analytics", "metrics", "llm", "infrastructure"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
dashboard = [
    "flask>=3.0.0",
    "plotly>=5.0.0",
    "pandas>=2.0.0",
]
postgres = [
    "psycopg2-binary>=2.9.0",
]
postgresql = [
    "psycopg2-binary>=2.9.0",
]
# Note: Both 'postgres' and 'postgresql' install the same PostgreSQL driver
# Use: pip install stacksense[postgresql] or pip install stacksense[postgres]

[project.urls]
Homepage = "https://github.com/Abdulkvng/stacksense"
Documentation = "https://stacksense.readthedocs.io"
Repository = "https://github.com/Abdulkvng/stacksense"
"Bug Tracker" = "https://github.com/Abdulkvng/stacksense/issues"

[tool.setuptools.packages.find]
include = ["stacksense*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]